@@ -5,8 +5,11 @@
 	 (Fix from Mikkel Krautz)
 - MSI: Add support for MsiDigitalSignatureEx signature
 	 (Patch from Mikkel Krautz)
+- add support for adding additional/cross certificates
+  through -ac option
+	 (Thanks to Lars Munch for idea + testing)
 
-
+	
 === 1.5.2 (2013-03-13)
 
 - added support for signing with SHA-384 and SHA-512
